# miur

./: .gitignore  meson.build
assets/: cube.gltf  effect.json  funny-cube.gltf  plane.gltf  technique.json
include/miur/: bsl.h  config.h  descriptor_allocator.h  device.h  fs_monitor.h  gltf.h  json.h  log.h  map.c.h  material.h  mem.h  membuf.h  model.h  render.h  render_graph.h  render_priv.h  shader.h  string.h  swapchain.h  thread.h  utils.h  vector.c.h
log/: bugs.md  progress.md
shaders/: bsl.spv  test.glsl  test.spv  triangle.vert  triangle_frag.bsl  triangle_vert.bsl  triangle_vert.spv
src/: .main.c.swp  .render.c.swp  .render_graph.c.swp  bsl.c  descriptor_allocator.c  device.c  fs_monitor.c  gltf.c  json.c  log.c  main.c  material.c  membuf.c  render.c  render_graph.c  shader.c  string.c  swapchain.c  thread.c
subprojects/: cwin.wrap
